@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,6 +26,7 @@
  *
  * @test
  * @bug 8287136 8292630 8279368 8287136 8287770 8279840 8279672 8292753 8287763 8279901 8287767 8293183 8293120
+ *      8329345 8341061 8340984
  * @summary Negative compilation tests, and positive compilation (smoke) tests for Value Objects
  * @library /lib/combo /tools/lib
  * @modules
@@ -35,177 +36,206 @@
  *     jdk.compiler/com.sun.tools.javac.code
  *     jdk.jdeps/com.sun.tools.classfile
  * @build toolbox.ToolBox toolbox.JavacTask
- * @run testng ValueObjectCompilationTests
+ * @run junit ValueObjectCompilationTests
  */
 
 import java.io.File;
 
 import java.util.List;
+import java.util.Set;
 
+import com.sun.tools.javac.util.Assert;
+
+import com.sun.tools.classfile.Attribute;
+import com.sun.tools.classfile.Attributes;
 import com.sun.tools.classfile.ClassFile;
 import com.sun.tools.classfile.Code_attribute;
 import com.sun.tools.classfile.ConstantPool;
 import com.sun.tools.classfile.ConstantPool.CONSTANT_Class_info;
 import com.sun.tools.classfile.ConstantPool.CONSTANT_Fieldref_info;
 import com.sun.tools.classfile.ConstantPool.CONSTANT_Methodref_info;
+import com.sun.tools.classfile.ConstantPool.CONSTANT_NameAndType_info;
+import com.sun.tools.classfile.ConstantPool.CPRefInfo;
 import com.sun.tools.classfile.Field;
 import com.sun.tools.classfile.Instruction;
 import com.sun.tools.classfile.Method;
+import com.sun.tools.classfile.StackMapTable_attribute;
 
 import com.sun.tools.javac.code.Flags;
 
-import static org.testng.Assert.assertTrue;
-import org.testng.annotations.Test;
-
+import org.junit.jupiter.api.Test;
 import tools.javac.combo.CompilationTestCase;
-
 import toolbox.ToolBox;
 
-@Test
-public class ValueObjectCompilationTests extends CompilationTestCase {
+class ValueObjectCompilationTests extends CompilationTestCase {
+
+    private static String[] PREVIEW_OPTIONS = {
+            "--enable-preview",
+            "-source", Integer.toString(Runtime.version().feature())
+    };
+
+    private static String[] PREVIEW_OPTIONS_PLUS_VM_ANNO = {
+            "--enable-preview",
+            "-source", Integer.toString(Runtime.version().feature()),
+            "--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED"
+    };
 
     public ValueObjectCompilationTests() {
         setDefaultFilename("ValueObjectsTest.java");
+        setCompileOptions(PREVIEW_OPTIONS);
     }
 
-    public void testAbstractValueClassConstraints() {
-        assertFail("compiler.err.instance.field.not.allowed",
-                """
-                abstract value class V {
-                    int f;  // Error, abstract value class may not declare an instance field.
-                }
-                """);
-        assertFail("compiler.err.abstract.value.class.cannot.be.inner",
-                """
-                class Outer {
-                    abstract value class V {
-                        // Error, an abstract value class cant be an inner class
-                    }
-                }
-                """);
-        assertFail("compiler.err.mod.not.allowed.here",
-                """
-                abstract value class V {
-                    synchronized void foo() {
-                     // Error, abstract value class may not declare a synchronized instance method.
-                    }
-                }
-                """);
-        assertFail("compiler.err.abstract.value.class.declares.init.block",
-                """
-                abstract value class V {
-                    { int f = 42; } // Error, abstract value class may not declare an instance initializer.
-                }
-                """);
-        assertFail("compiler.err.abstract.value.class.constructor.cannot.take.arguments",
-                """
-                abstract value class V {
-                    V(int x) {}  // Error, abstract value class may not declare a non-trivial constructor.
-                }
-                """);
-    }
-
-    public void testAnnotationsConstraints() {
-        assertFail("compiler.err.illegal.combination.of.modifiers",
-                """
-                identity @interface IA {}
-                """);
+    @Test
+    void testValueModifierConstraints() {
         assertFail("compiler.err.illegal.combination.of.modifiers",
                 """
                 value @interface IA {}
                 """);
-    }
-
-    public void testCheckFeatureSourceLevel() {
-        setCompileOptions(new String[]{"--release", "13"});
-        assertFail("compiler.err.feature.not.supported.in.source.plural",
+        assertFail("compiler.err.illegal.combination.of.modifiers",
                 """
-                value class V {
-                    public int v = 42;
+                value interface I {}
+                """);
+        assertFail("compiler.err.mod.not.allowed.here",
+                """
+                class Test {
+                    value int x;
                 }
                 """);
-        setCompileOptions(new String[]{});
-    }
-
-    public void testSuperClassConstraints() {
-        assertFail("compiler.err.instance.field.not.allowed",
+        assertFail("compiler.err.mod.not.allowed.here",
                 """
-                abstract class I { // identity class since it declares an instance field.
-                    int f;
-                }
-                value class V extends I {}
-                """);
-
-        assertFail("compiler.err.abstract.value.class.cannot.be.inner",
-                """
-                class Outer {
-                    abstract class I {} // has identity since is an inner class
-                    static value class V extends I
+                class Test {
+                    value int foo();
                 }
                 """);
-
-        assertFail("compiler.err.super.class.method.cannot.be.synchronized",
+        assertFail("compiler.err.mod.not.allowed.here",
                 """
-                abstract class I { // has identity since it declared a synchronized instance method.
-                    synchronized void foo() {}
-                }
-                value class V extends I {}
-                """);
-
-        assertFail("compiler.err.abstract.value.class.declares.init.block",
-                """
-                abstract class I { // has identity since it declares an instance initializer
-                    { int f = 42; }
-                }
-                value class V extends I {}
-                """);
-
-        assertFail("compiler.err.abstract.value.class.constructor.cannot.take.arguments",
-                """
-                abstract class I { // has identity since it declares a non-trivial constructor
-                    I(int x) {}
-                }
-                value class V extends I {}
-                """);
-        assertFail("compiler.err.concrete.supertype.for.value.class",
-                """
-                class ConcreteSuperType {
-                    static abstract value class V extends ConcreteSuperType {}  // Error: concrete super.
-                }
+                value enum Enum {}
                 """);
     }
 
-    public void testSynchronizeOnValueInterfaceInstance() {
-        assertFail("compiler.err.type.found.req",
-                """
-                value interface VI {
-                    default void foo(VI vi) {
-                        synchronized (vi) {} // Error
-                    }
-                }
-                """);
-    }
+    record TestData(String message, String snippet, String[] compilerOptions, boolean testLocalToo) {
+        TestData(String snippet) {
+            this("", snippet, null, true);
+        }
 
-    public void testRepeatedModifiers() {
-        String[] previousOptions = getCompileOptions();
-        try {
-            String[] testOptions = {"-XDenablePrimitiveClasses"};
-            setCompileOptions(testOptions);
-            String[] sources = new String[] {
-                    "static static class StaticTest {}",
-                    "native native class NativeTest {}",
-                    "value value primitive class ValueTest {}",
-                    "primitive primitive value class PrimitiveTest {}"
-            };
-            for (String source : sources) {
-                assertFail("compiler.err.repeated.modifier", source);
-            }
-        } finally {
-            setCompileOptions(previousOptions);
+        TestData(String snippet, boolean testLocalToo) {
+            this("", snippet, null, testLocalToo);
+        }
+
+        TestData(String message, String snippet) {
+            this(message, snippet, null, true);
+        }
+
+        TestData(String snippet, String[] compilerOptions) {
+            this("", snippet, compilerOptions, true);
+        }
+
+        TestData(String message, String snippet, String[] compilerOptions) {
+            this(message, snippet, compilerOptions, true);
+        }
+
+        TestData(String message, String snippet, boolean testLocalToo) {
+            this(message, snippet, null, testLocalToo);
         }
     }
 
-    public void testParserTest() {
+    private void testHelper(List<TestData> testDataList) {
+        String ttt =
+                """
+                    class TTT {
+                        void m() {
+                            #LOCAL
+                        }
+                    }
+                """;
+        for (TestData td : testDataList) {
+            String localSnippet = ttt.replace("#LOCAL", td.snippet);
+            String[] previousOptions = getCompileOptions();
+            try {
+                if (td.compilerOptions != null) {
+                    setCompileOptions(td.compilerOptions);
+                }
+                if (td.message == "") {
+                    assertOK(td.snippet);
+                    if (td.testLocalToo) {
+                        assertOK(localSnippet);
+                    }
+                } else if (td.message.startsWith("compiler.err")) {
+                    assertFail(td.message, td.snippet);
+                    if (td.testLocalToo) {
+                        assertFail(td.message, localSnippet);
+                    }
+                } else {
+                    assertOKWithWarning(td.message, td.snippet);
+                    if (td.testLocalToo) {
+                        assertOKWithWarning(td.message, localSnippet);
+                    }
+                }
+            } finally {
+                setCompileOptions(previousOptions);
+            }
+        }
+    }
+
+    private static final List<TestData> superClassConstraints = List.of(
+            new TestData(
+                    "compiler.err.super.class.method.cannot.be.synchronized",
+                    """
+                    abstract class I {
+                        synchronized void foo() {}
+                    }
+                    value class V extends I {}
+                    """
+            ),
+            new TestData(
+                    "compiler.err.concrete.supertype.for.value.class",
+                    """
+                    class ConcreteSuperType {
+                        static abstract value class V extends ConcreteSuperType {}  // Error: concrete super.
+                    }
+                    """
+            ),
+            new TestData(
+                    """
+                    value record Point(int x, int y) {}
+                    """
+            ),
+            new TestData(
+                    """
+                    value class One extends Number {
+                        public int intValue() { return 0; }
+                        public long longValue() { return 0; }
+                        public float floatValue() { return 0; }
+                        public double doubleValue() { return 0; }
+                    }
+                    """
+            ),
+            new TestData(
+                    """
+                    value class V extends Object {}
+                    """
+            ),
+            new TestData(
+                    "compiler.err.value.type.has.identity.super.type",
+                    """
+                    abstract class A {}
+                    value class V extends A {}
+                    """
+            )
+    );
+
+    @Test
+    void testSuperClassConstraints() {
+        testHelper(superClassConstraints);
+    }
+
+    @Test
+    void testRepeatedModifiers() {
+        assertFail("compiler.err.repeated.modifier", "value value class ValueTest {}");
+    }
+
+    @Test
+    void testParserTest() {
         assertOK(
                 """
                 value class Substring implements CharSequence {
@@ -247,359 +277,351 @@ public class ValueObjectCompilationTests extends CompilationTestCase {
         );
     }
 
-    public void testSemanticsViolations() {
-        assertFail("compiler.err.cant.inherit.from.final",
-                """
-                value class Base {}
-                class Subclass extends Base {}
-                """);
-        assertFail("compiler.err.abstract.value.class.cannot.be.inner",
-                """
-                class Outer {
-                    abstract value class AbsValue {}
-                }
-                """);
-        assertFail("compiler.err.cant.assign.val.to.final.var",
-                """
-                value class Point {
-                    int x = 10;
-                    int y;
-                    Point (int x, int y) {
-                        this.x = x; // Error, final field 'x' is already assigned to.
-                        this.y = y; // OK.
+    private static final List<TestData> semanticsViolations = List.of(
+            new TestData(
+                    "compiler.err.cant.inherit.from.final",
+                    """
+                    value class Base {}
+                    class Subclass extends Base {}
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.assign.val.to.var",
+                    """
+                    value class Point {
+                        int x = 10;
+                        int y;
+                        Point (int x, int y) {
+                            this.x = x; // Error, final field 'x' is already assigned to.
+                            this.y = y; // OK.
+                        }
                     }
-                }
-                """);
-        assertFail("compiler.err.cant.assign.val.to.final.var",
-                """
-                value class Point {
-                    int x;
-                    int y;
-                    Point (int x, int y) {
-                        this.x = x;
-                        this.y = y;
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.assign.val.to.var",
+                    """
+                    value class Point {
+                        int x;
+                        int y;
+                        Point (int x, int y) {
+                            this.x = x;
+                            this.y = y;
+                        }
+                        void foo(Point p) {
+                            this.y = p.y; // Error, y is final and can't be written outside of ctor.
+                        }
                     }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.assign.val.to.var",
+                    """
+                    abstract value class Point {
+                        int x;
+                        int y;
+                        Point (int x, int y) {
+                            this.x = x;
+                            this.y = y;
+                        }
+                        void foo(Point p) {
+                            this.y = p.y; // Error, y is final and can't be written outside of ctor.
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.var.might.not.have.been.initialized",
+                    """
+                    value class Point {
+                        int x;
+                        int y;
+                        Point (int x, int y) {
+                            this.x = x;
+                            // y hasn't been initialized
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.mod.not.allowed.here",
+                    """
+                    abstract value class V {
+                        synchronized void foo() {
+                         // Error, abstract value class may not declare a synchronized instance method.
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    """
+                    abstract value class V {
+                        static synchronized void foo() {} // OK static
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.mod.not.allowed.here",
+                    """
+                    value class V {
+                        synchronized void foo() {}
+                    }
+                    """
+            ),
+            new TestData(
+                    """
+                    value class V {
+                        synchronized static void soo() {} // OK static
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req",
+                    """
+                    value class V {
+                        { synchronized(this) {} }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.mod.not.allowed.here",
+                    """
+                    value record R() {
+                        synchronized void foo() { } // Error;
+                        synchronized static void soo() {} // OK.
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.ref.before.ctor.called",
+                    """
+                    value class V {
+                        int x;
+                        V() {
+                            foo(this); // Error.
+                            x = 10;
+                        }
+                        void foo(V v) {}
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.cant.ref.before.ctor.called",
+                    """
+                    value class V {
+                        int x;
+                        V() {
+                            x = 10;
+                            foo(this); // error
+                        }
+                        void foo(V v) {}
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req",
+                    """
+                    interface I {}
+                    interface VI extends I {}
+                    class C {}
+                    value class VC<T extends VC> {
+                        void m(T t) {
+                            synchronized(t) {} // error
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req",
+                    """
+                    interface I {}
+                    interface VI extends I {}
+                    class C {}
+                    value class VC<T extends VC> {
+                        void foo(Object o) {
+                            synchronized ((VC & I)o) {} // error
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    // OK if the value class is abstract
+                    """
+                    interface I {}
+                    abstract value class VI implements I {}
+                    class C {}
+                    value class VC<T extends VC> {
+                        void bar(Object o) {
+                            synchronized ((VI & I)o) {} // error
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req", // --enable-preview -source"
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // error
+                            }
+                        }
+                    }
+                    """
+            ),
+            new TestData(
+                    "compiler.err.type.found.req", // --enable-preview -source"
+                    """
+                    import java.time.*;
+                    class V {
+                        final Duration val = Duration.ZERO;
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """,
+                    false // cant do local as there is an import statement
+            ),
+            new TestData(
+                    "compiler.warn.attempt.to.synchronize.on.instance.of.value.based.class", // empty options
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """,
+                    new String[] {}
+            ),
+            new TestData(
+                    "compiler.warn.attempt.to.synchronize.on.instance.of.value.based.class", // --source
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """,
+                    new String[] {"--source", Integer.toString(Runtime.version().feature())}
+            ),
+            new TestData(
+                    "compiler.warn.attempt.to.synchronize.on.instance.of.value.based.class", // --source
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """,
+                    new String[] {"--source", Integer.toString(Runtime.version().feature())}
+            ),
+            new TestData(
+                    "compiler.err.illegal.combination.of.modifiers", // --enable-preview -source"
+                    """
+                    value class V {
+                        volatile int f = 1;
+                    }
+                    """
+            )
+    );
 
-                    void foo(Point p) {
-                        this.y = p.y; // Error, y is final and can't be written outside of ctor.
-                    }
-                }
-                """);
-        assertFail("compiler.err.var.might.not.have.been.initialized",
-                """
-                value class Point {
-                    int x;
-                    int y;
-                    Point (int x, int y) {
-                        this.x = x;
-                        // y hasn't been initialized
-                    }
-                }
-                """);
-        assertFail("compiler.err.illegal.combination.of.modifiers",
-                """
-                value identity class ValueIdentity {}
-                """);
-        assertFail("compiler.err.illegal.combination.of.modifiers",
-                """
-                identity value class IdentityValue {}
-                """);
-        assertFail("compiler.err.call.to.super.not.allowed.in.value.ctor",
-                """
-                value class V {
-                    V() {
-                        super();
-                    }
-                }
-                """);
-        assertFail("compiler.err.mod.not.allowed.here",
-                """
-                value class V {
-                    synchronized void foo() {}
-                }
-                """);
-        assertOK(
-                """
-                value class V {
-                    synchronized static void soo() {}
-                }
-                """);
-        assertFail("compiler.err.type.found.req",
-                """
-                value class V {
-                    { synchronized(this) {} }
-                }
-                """);
-        assertFail("compiler.err.mod.not.allowed.here",
-                """
-                value record R() {
-                    synchronized void foo() { } // Error;
-                    synchronized static void soo() {} // OK.
-                }
-                """);
-        assertFail("compiler.err.this.exposed.prematurely",
-                """
-                value class V {
-                    int x;
-                    V() {
-                        foo(this); // Error.
-                        x = 10;
-                    }
-                    void foo(V v) {}
-                }
-                """);
-        assertOK(
-                """
-                value class V {
-                    int x;
-                    V() {
-                        x = 10;
-                        foo(this); // Ok.
-                    }
-                    void foo(V v) {}
-                }
-                """);
-        assertFail("compiler.err.type.found.req",
-                """
-                interface I {}
-                value interface VI extends I {}
-                class C {}
-                value class VC<T extends VC> {
-                    void m(T t) {
-                        synchronized(t) {} // error
-                    }
-                }
-                """);
-        assertFail("compiler.err.type.found.req",
-                """
-                interface I {}
-                value interface VI extends I {}
-                class C {}
-                value class VC<T extends VC> {
-                    void foo(Object o) {
-                        synchronized ((VC & I)o) {} // error
-                    }
-                }
-                """);
-        assertFail("compiler.err.type.found.req",
-                """
-                interface I {}
-                value interface VI extends I {}
-                class C {}
-                value class VC<T extends VC> {
-                    void bar(Object o) {
-                        synchronized ((I & VI)o) {} // error
-                    }
-                }
-                """);
+    @Test
+    void testSemanticsViolations() {
+        testHelper(semanticsViolations);
     }
 
-    public void testNontrivialConstructor() {
-        assertOK(
-                """
-                abstract value class V {
-                    public V() {} // trivial ctor
-                }
-                """
-        );
-        assertFail("compiler.err.abstract.value.class.constructor.has.weaker.access",
-                """
-                abstract value class V {
-                    private V() {} // non-trivial, more restrictive access than the class.
-                }
-                """);
-        assertFail("compiler.err.abstract.value.class.constructor.cannot.take.arguments",
-                """
-                abstract value class V {
-                    public V(int x) {} // non-trivial ctor as it declares formal parameters.
-                }
-                """);
-        assertFail("compiler.err.abstract.value.class.constructor.cannot.be.generic",
-                """
-                abstract value class V {
-                    <T> V() {} // non trivial as it declares type parameters.
-                }
-                """);
-        assertFail("compiler.err.abstract.value.class.constructor.cannot.throw",
-                """
-                abstract value class V {
-                    V() throws Exception {} // non-trivial as it throws
-                }
-                """);
-        assertFail("compiler.err.abstract.value.class.no.arg.constructor.must.be.empty",
-                """
-                abstract value class V {
-                    V() {
-                        System.out.println("");
-                    } // non-trivial as it has a body.
-                }
-                """);
+    private static final List<TestData> sealedClassesData = List.of(
+            new TestData(
+                    """
+                    abstract sealed value class SC {}
+                    value class VC extends SC {}
+                    """,
+                    false // local sealed classes are not allowed
+            ),
+            new TestData(
+                    """
+                    abstract sealed interface SI {}
+                    value class VC implements SI {}
+                    """,
+                    false // local sealed classes are not allowed
+            ),
+            new TestData(
+                    """
+                    abstract sealed class SC {}
+                    final class IC extends SC {}
+                    non-sealed class IC2 extends SC {}
+                    final class IC3 extends IC2 {}
+                    """,
+                    false
+            ),
+            new TestData(
+                    """
+                    abstract sealed interface SI {}
+                    final class IC implements SI {}
+                    non-sealed class IC2 implements SI {}
+                    final class IC3 extends IC2 {}
+                    """,
+                    false // local sealed classes are not allowed
+            ),
+            new TestData(
+                    "compiler.err.non.abstract.value.class.cant.be.sealed.or.non.sealed",
+                    """
+                    abstract sealed value class SC {}
+                    non-sealed value class VC extends SC {}
+                    """,
+                    false
+            ),
+            new TestData(
+                    "compiler.err.non.abstract.value.class.cant.be.sealed.or.non.sealed",
+                    """
+                    sealed value class SI {}
+                    """,
+                    false
+            ),
+            new TestData(
+                    """
+                    sealed abstract value class SI {}
+                    value class V extends SI {}
+                    """,
+                    false
+            ),
+            new TestData(
+                    """
+                    sealed abstract value class SI permits V {}
+                    value class V extends SI {}
+                    """,
+                    false
+            ),
+            new TestData(
+                    """
+                    sealed interface I {}
+                    non-sealed abstract value class V implements I {}
+                    """,
+                    false
+            ),
+            new TestData(
+                    """
+                    sealed interface I permits V {}
+                    non-sealed abstract value class V implements I {}
+                    """,
+                    false
+            )
+    );
+
+    @Test
+    void testInteractionWithSealedClasses() {
+        testHelper(sealedClassesData);
     }
 
-    public void testFunctionalInterface() {
-        assertFail("compiler.err.bad.functional.intf.anno.1",
-                """
-                @FunctionalInterface
-                identity interface I { // Error
-                    void m();
-                }
-                """);
-        assertFail("compiler.err.bad.functional.intf.anno.1",
-                """
-                @FunctionalInterface
-                value interface K { // Error
-                    void m();
-                }
-                """);
-        assertFail("compiler.err.prob.found.req",
-                """
-                identity interface L {
-                    void m();
-                }
-                class Test {
-                    void foo() {
-                        var t = (L) () -> {}; // Error
-                    }
-                }
-                """);
-        assertFail("compiler.err.prob.found.req",
-                """
-                value interface M {
-                    void m();
-                }
-                class Test {
-                    void foo() {
-                        var u = (M) () -> {}; // Error
-                    }
-                }
-                """);
-        assertFail("compiler.err.bad.functional.intf.anno.1",
-                """
-                identity interface I {
-                    void m();
-                }
-
-                @FunctionalInterface
-                interface J extends I  {}
-                """);
-        assertFail("compiler.err.bad.functional.intf.anno.1",
-                """
-                value interface I {
-                    void m();
-                }
-
-                @FunctionalInterface
-                interface J extends I  {}
-                """);
-        assertFail("compiler.err.prob.found.req",
-                """
-                identity interface I {}
-                interface K extends I {}
-                interface J {
-                    void m();
-                }
-                class Test {
-                    void foo() {
-                        J j = (J&K)() -> {};
-                    }
-                }
-                """);
-        assertFail("compiler.err.prob.found.req",
-                """
-                value interface I {}
-                interface K extends I {}
-                interface J {
-                    void m();
-                }
-                class Test {
-                    void foo() {
-                        J j = (J&K)() -> {};
-                    }
-                }
-                """);
-    }
-
-    public void testSupers() {
-        assertFail("compiler.err.mutually.incompatible.supers",
-                """
-                identity interface II {}
-                value interface VI {}
-                abstract class X implements II, VI {}
-                """);
-        assertFail("compiler.err.value.type.has.identity.super.type",
-                """
-                identity interface II {}
-                interface GII extends II {} // OK.
-                value interface BVI extends GII {} // Error
-                """);
-        assertFail("compiler.err.identity.type.has.value.super.type",
-                """
-                value interface VI {}
-                interface GVI extends VI {} // OK.
-                identity interface BII extends GVI {} // Error
-                """);
-        assertFail("compiler.err.value.type.has.identity.super.type",
-                """
-                identity interface II {}
-                value class BVC implements II {} // Error
-                """);
-        assertFail("compiler.err.identity.type.has.value.super.type",
-                """
-                value interface VI {}
-                class BIC implements VI {} // Error
-                """);
-        assertFail("compiler.err.identity.type.has.value.super.type",
-                """
-                value interface I {}
-                class Test {
-                    I i = new I() {};
-                }
-                """);
-    }
-
-    public void testInteractionWithSealedClasses() {
-        assertOK(
-                """
-                abstract sealed value class SC {}
-                value class VC extends SC {}
-                """
-        );assertOK(
-                """
-                abstract sealed value interface SI {}
-                value class VC implements SI {}
-                """
-        );
-        assertOK(
-                """
-                abstract sealed identity class SC {}
-                final identity class IC extends SC {}
-                non-sealed identity class IC2 extends SC {}
-                final identity class IC3 extends IC2 {}
-                """
-        );
-        assertOK(
-                """
-                abstract sealed identity interface SI {}
-                final identity class IC implements SI {}
-                non-sealed identity class IC2 implements SI {}
-                final identity class IC3 extends IC2 {}
-                """
-        );
-        assertFail("compiler.err.mod.not.allowed.here",
-                """
-                abstract sealed value class SC {}
-                non-sealed value class VC extends SC {}
-                """
-        );
-        assertFail("compiler.err.mod.not.allowed.here",
-                """
-                sealed value interface SI {}
-                non-sealed value class VC implements SI {}
-                """
-        );
-    }
-
-    public void testCheckClassFileFlags() throws Exception {
+    @Test
+    void testCheckClassFileFlags() throws Exception {
         for (String source : List.of(
                 """
                 interface I {}
@@ -620,7 +642,6 @@ public class ValueObjectCompilationTests extends CompilationTestCase {
                 """,
                 """
                 class Test {
-                    // abstract inner class is implicitly an `identity` class
                     abstract class Inner {}
                 }
                 """
@@ -629,44 +650,38 @@ public class ValueObjectCompilationTests extends CompilationTestCase {
             for (final File fileEntry : dir.listFiles()) {
                 if (fileEntry.getName().contains("$")) {
                     ClassFile classFile = ClassFile.read(fileEntry);
-                    assertTrue((classFile.access_flags.flags & Flags.ACC_IDENTITY) != 0);
+                    Assert.check((classFile.access_flags.flags & Flags.ACC_IDENTITY) != 0);
                 }
             }
         }
 
         for (String source : List.of(
                 """
-                identity interface I {}
-                class Sub implements I {}
+                class C {}
                 """,
                 """
                 abstract class A {
-                    // declares a non-static field so it is implicitly an identity class
                     int i;
                 }
                 """,
                 """
                 abstract class A {
-                    // declares a synchronized method so it is implicitly an identity class
                     synchronized void m() {}
                 }
                 """,
                 """
                 class C {
-                    // declares a synchronized method so it is implicitly an identity class
                     synchronized void m() {}
                 }
                 """,
                 """
                 abstract class A {
                     int i;
-                    // declares an instance initializer so it is implicitly an identity class
                     { i = 0; }
                 }
                 """,
                 """
                 abstract class A {
-                    // declares a non-trivial constructor
                     A(int i) {}
                 }
                 """,
@@ -674,42 +689,31 @@ public class ValueObjectCompilationTests extends CompilationTestCase {
                     enum E {}
                 """,
                 """
-                    identity enum E {}
-                """,
-                """
                     record R() {}
-                """,
-                """
-                   identity record R() {}
                 """
         )) {
             File dir = assertOK(true, source);
             for (final File fileEntry : dir.listFiles()) {
                 ClassFile classFile = ClassFile.read(fileEntry);
-                assertTrue(classFile.access_flags.is(Flags.ACC_IDENTITY));
-                assertTrue(!classFile.access_flags.is(Flags.VALUE_CLASS));
+                Assert.check(classFile.access_flags.is(Flags.ACC_IDENTITY));
             }
         }
 
         {
             String source =
                     """
-                            value interface I {}
-                            abstract class A implements I {} // not a value class as it doens't have the value modifier
-                            value class Sub extends A {} //implicitly final
-                            """;
+                    abstract value class A {}
+                    value class Sub extends A {} //implicitly final
+                    """;
             File dir = assertOK(true, source);
             for (final File fileEntry : dir.listFiles()) {
                 ClassFile classFile = ClassFile.read(fileEntry);
                 switch (classFile.getName()) {
                     case "Sub":
-                        assertTrue((classFile.access_flags.flags & (Flags.VALUE_CLASS | Flags.FINAL)) != 0);
+                        Assert.check((classFile.access_flags.flags & (Flags.FINAL)) != 0);
                         break;
                     case "A":
-                        assertTrue((classFile.access_flags.flags & (Flags.ABSTRACT)) != 0);
-                        break;
-                    case "I":
-                        assertTrue((classFile.access_flags.flags & (Flags.INTERFACE | Flags.VALUE_CLASS)) != 0);
+                        Assert.check((classFile.access_flags.flags & (Flags.ABSTRACT)) != 0);
                         break;
                     default:
                         throw new AssertionError("you shoulnd't be here");
@@ -739,110 +743,817 @@ public class ValueObjectCompilationTests extends CompilationTestCase {
                 ClassFile classFile = ClassFile.read(fileEntry);
                 for (Field field : classFile.fields) {
                     if (!field.access_flags.is(Flags.STATIC)) {
-                        assertTrue(field.access_flags.is(Flags.FINAL));
+                        Set<String> fieldFlags = field.access_flags.getFieldFlags();
+                        Assert.check(fieldFlags.size() == 2 && fieldFlags.contains("ACC_FINAL") && fieldFlags.contains("ACC_STRICT"));
                     }
+                }
+            }
+        }
+
+        // testing experimental @Strict annotation
+        String[] previousOptions = getCompileOptions();
+        try {
+            String[] testOptions = {"--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED"};
+            setCompileOptions(testOptions);
+            for (String source : List.of(
+                    """
+                    import jdk.internal.vm.annotation.Strict;
+                    class Test {
+                        @Strict int i;
+                    }
+                    """,
+                    """
+                    import jdk.internal.vm.annotation.Strict;
+                    class Test {
+                        @Strict final int i = 0;
+                    }
+                    """
+            )) {
+                File dir = assertOK(true, source);
+                for (final File fileEntry : dir.listFiles()) {
+                    ClassFile classFile = ClassFile.read(fileEntry);
+                    for (Field field : classFile.fields) {
+                        if (!field.access_flags.is(Flags.STATIC)) {
+                            Set<String> fieldFlags = field.access_flags.getFieldFlags();
+                            Assert.check(fieldFlags.contains("ACC_STRICT"));
+                        }
+                    }
+                }
+            }
+        } finally {
+            setCompileOptions(previousOptions);
+        }
+    }
+
+    @Test
+    void testConstruction() throws Exception {
+        record Data(String src, boolean isRecord) {
+            Data(String src) {
+                this(src, false);
+            }
+        }
+        for (Data data : List.of(
+                new Data(
+                    """
+                    value class Test {
+                        int i = 100;
+                    }
+                    """),
+                new Data(
+                    """
+                    value class Test {
+                        int i;
+                        Test() {
+                            i = 100;
+                        }
+                    }
+                    """),
+                new Data(
+                    """
+                    value class Test {
+                        int i;
+                        Test() {
+                            i = 100;
+                            super();
+                        }
+                    }
+                    """),
+                new Data(
+                    """
+                    value class Test {
+                        int i;
+                        Test() {
+                            this.i = 100;
+                            super();
+                        }
+                    }
+                    """),
+                new Data(
+                    """
+                    value record Test(int i) {}
+                    """, true)
+        )) {
+            String expectedCodeSequence = "aload_0,bipush,putfield,aload_0,invokespecial,return,";
+            String expectedCodeSequenceRecord = "aload_0,iload_1,putfield,aload_0,invokespecial,return,";
+            File dir = assertOK(true, data.src);
+            for (final File fileEntry : dir.listFiles()) {
+                ClassFile classFile = ClassFile.read(fileEntry);
+                for (Method method : classFile.methods) {
+                    if (method.getName(classFile.constant_pool).equals("<init>")) {
+                        Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                        String foundCodeSequence = "";
+                        for (Instruction inst: code.getInstructions()) {
+                            foundCodeSequence += inst.getMnemonic() + ",";
+                        }
+                        if (!data.isRecord) {
+                            Assert.check(expectedCodeSequence.equals(foundCodeSequence));
+                        } else {
+                            Assert.check(expectedCodeSequenceRecord.equals(foundCodeSequence));
+                        }
+                    }
+                }
+            }
+        }
+
+        String source =
+                """
+                value class Test {
+                    int i = 100;
+                    int j = 0;
+                    {
+                        System.out.println(j);
+                    }
+                }
+                """;
+        String expectedCodeSequence = "aload_0,bipush,putfield,aload_0,iconst_0,putfield,aload_0,invokespecial,getstatic,iconst_0,invokevirtual,return,";
+        File dir = assertOK(true, source);
+        for (final File fileEntry : dir.listFiles()) {
+            ClassFile classFile = ClassFile.read(fileEntry);
+            for (Method method : classFile.methods) {
+                if (method.getName(classFile.constant_pool).equals("<init>")) {
+                    Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                    String foundCodeSequence = "";
+                    for (Instruction inst: code.getInstructions()) {
+                        foundCodeSequence += inst.getMnemonic() + ",";
+                    }
+                    Assert.check(expectedCodeSequence.equals(foundCodeSequence), "found " + foundCodeSequence);
+                }
+            }
+        }
+
+        assertFail("compiler.err.cant.ref.before.ctor.called",
+                """
+                value class Test {
+                    Test() {
+                        m();
+                    }
+                    void m() {}
+                }
+                """
+        );
+        assertFail("compiler.err.cant.ref.after.ctor.called",
+                """
+                value class Test {
+                    int i;
+                    Test() {
+                        super();
+                        this.i = i;
+                    }
+                }
+                """
+        );
+        assertOK(
+                """
+                class UnrelatedThisLeak {
+                    value class V {
+                        int f;
+                        V() {
+                            UnrelatedThisLeak x = UnrelatedThisLeak.this;
+                            f = 10;
+                            x = UnrelatedThisLeak.this;
+                        }
+                    }
+                }
+                """
+        );
+        assertFail("compiler.err.cant.ref.before.ctor.called",
+                """
+                value class Test {
+                    Test t = null;
+                    Runnable r = () -> { System.err.println(t); };
+                }
+                """
+        );
+        assertFail("compiler.err.cant.ref.after.ctor.called",
+                """
+                value class Test {
+                    int f;
+                    {
+                        f = 1;
+                    }
+                }
+                """
+        );
+        assertFail("compiler.err.cant.ref.before.ctor.called",
+                """
+                value class V {
+                    int x;
+                    int y = x + 1; // allowed
+                    V1() {
+                        x = 12;
+                        // super();
+                    }
+                }
+                """
+        );
+        assertFail("compiler.err.var.might.already.be.assigned",
+                """
+                value class V2 {
+                    int x;
+                    V2() { this(x = 3); } // error
+                    V2(int i) { x = 4; }
+                }
+                """
+        );
+        assertOK(
+                """
+                abstract value class AV1 {
+                    AV1(int i) {}
+                }
+                value class V3 extends AV1 {
+                    int x;
+                    V3() {
+                        super(x = 3); // ok
+                    }
+                }
+                """
+        );
+        assertFail("compiler.err.cant.ref.before.ctor.called",
+                """
+                value class V4 {
+                    int x;
+                    int y = x + 1;
+                    V4() {
+                        x = 12;
+                    }
+                    V4(int i) {
+                        x = i;
+                    }
+                }
+                """
+        );
+        assertOK(
+                """
+                value class V {
+                    final int x = "abc".length();
+                    { System.out.println(x); }
+                }
+                """
+        );
+        assertFail("compiler.err.illegal.forward.ref",
+                """
+                value class V {
+                    { System.out.println(x); }
+                    final int x = "abc".length();
+                }
+                """
+        );
+        assertFail("compiler.err.cant.ref.before.ctor.called",
+                """
+                value class V {
+                    int x = "abc".length();
+                    int y = x;
+                }
+                """
+        );
+        assertOK(
+                """
+                value class V {
+                    int x = "abc".length();
+                    { int y = x; }
+                }
+                """
+        );
+        assertOK(
+                """
+                value class V {
+                    String s1;
+                    { System.out.println(s1); }
+                    String s2 = (s1 = "abc");
+                }
+                """
+        );
+
+        String[] previousOptions = getCompileOptions();
+        try {
+            setCompileOptions(PREVIEW_OPTIONS_PLUS_VM_ANNO);
+            String[] sources = new String[]{
+                    """
+                    import jdk.internal.vm.annotation.Strict;
+                    class Test {
+                        static value class IValue {
+                            int i = 0;
+                        }
+                        @Strict
+                        final IValue val = new IValue();
+                    }
+                    """,
+                    """
+                    import jdk.internal.vm.annotation.Strict;
+                    class Test {
+                        static value class IValue {
+                            int i = 0;
+                        }
+                        @Strict
+                        final IValue val;
+                        Test() {
+                            val = new IValue();
+                        }
+                    }
+                    """
+            };
+            expectedCodeSequence = "aload_0,new,dup,invokespecial,putfield,aload_0,invokespecial,return,";
+            for (String src : sources) {
+                dir = assertOK(true, src);
+                for (final File fileEntry : dir.listFiles()) {
+                    ClassFile classFile = ClassFile.read(fileEntry);
+                    if (classFile.getName().equals("Test")) {
+                        for (Method method : classFile.methods) {
+                            if (method.getName(classFile.constant_pool).equals("<init>")) {
+                                Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                                String foundCodeSequence = "";
+                                for (Instruction inst: code.getInstructions()) {
+                                    foundCodeSequence += inst.getMnemonic() + ",";
+                                }
+                                Assert.check(expectedCodeSequence.equals(foundCodeSequence), "found " + foundCodeSequence);
+                            }
+                        }
+                    }
+                }
+            }
+
+            assertFail("compiler.err.cant.ref.before.ctor.called",
+                    """
+                    import jdk.internal.vm.annotation.NullRestricted;
+                    import jdk.internal.vm.annotation.Strict;
+                    class StrictNR {
+                        static value class IValue {
+                            int i = 0;
+                        }
+                        value class SValue {
+                            short s = 0;
+                        }
+                        @Strict
+                        @NullRestricted
+                        IValue val = new IValue();
+                        @Strict
+                        @NullRestricted
+                        final IValue val2;
+                        @Strict
+                        @NullRestricted
+                        SValue val3 = new SValue();
+                    }
+                    """
+            );
+            assertFail("compiler.err.cant.ref.before.ctor.called",
+                    """
+                    import jdk.internal.vm.annotation.NullRestricted;
+                    import jdk.internal.vm.annotation.Strict;
+                    class StrictNR {
+                        static value class IValue {
+                            int i = 0;
+                        }
+                        value class SValue {
+                            short s = 0;
+                        }
+                        @Strict
+                        @NullRestricted
+                        IValue val = new IValue();
+                            @Strict
+                            @NullRestricted
+                            SValue val4;
+                        public StrictNR() {
+                            val4 = new SValue();
+                        }
+                    }
+                    """
+            );
+        } finally {
+            setCompileOptions(previousOptions);
+        }
+
+        source =
+            """
+            value class V {
+                int i = 1;
+                int y;
+                V() {
+                    y = 2;
+                }
+            }
+            """;
+        dir = assertOK(true, source);
+        File fileEntry = dir.listFiles()[0];
+        ClassFile classFile = ClassFile.read(fileEntry);
+        expectedCodeSequence = "putfield i,putfield y,";
+        for (Method method : classFile.methods) {
+            if (method.getName(classFile.constant_pool).equals("<init>")) {
+                Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                String foundCodeSequence = "";
+                for (Instruction inst: code.getInstructions()) {
+                    if (inst.getMnemonic().equals("putfield")) {
+                        CPRefInfo refInfo = (CPRefInfo)classFile.constant_pool.get(inst.getShort(1));
+                        CONSTANT_NameAndType_info nameAndType = refInfo.getNameAndTypeInfo();
+                        foundCodeSequence += inst.getMnemonic() + " " + nameAndType.getName() + ",";
+                    }
+                }
+                Assert.check(foundCodeSequence.equals(expectedCodeSequence), foundCodeSequence);
+            }
+        }
+    }
+
+    @Test
+    void testThisCallingConstructor() throws Exception {
+        // make sure that this() calling constructors doesn't initialize final fields
+        String source =
+                """
+                value class Test {
+                    int i;
+                    Test() {
+                        this(0);
+                    }
+
+                    Test(int i) {
+                        this.i = i;
+                    }
+                }
+                """;
+        File dir = assertOK(true, source);
+        File fileEntry = dir.listFiles()[0];
+        ClassFile classFile = ClassFile.read(fileEntry);
+        String expectedCodeSequenceThisCallingConst = "aload_0,iconst_0,invokespecial,return,";
+        String expectedCodeSequenceNonThisCallingConst = "aload_0,iload_1,putfield,aload_0,invokespecial,return,";
+        for (Method method : classFile.methods) {
+            if (method.getName(classFile.constant_pool).equals("<init>")) {
+                if (method.descriptor.getParameterCount(classFile.constant_pool) == 0) {
+                    Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                    String foundCodeSequence = "";
+                    for (Instruction inst: code.getInstructions()) {
+                        foundCodeSequence += inst.getMnemonic() + ",";
+                    }
+                    Assert.check(expectedCodeSequenceThisCallingConst.equals(foundCodeSequence));
+                } else {
+                    Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                    String foundCodeSequence = "";
+                    for (Instruction inst: code.getInstructions()) {
+                        foundCodeSequence += inst.getMnemonic() + ",";
+                    }
+                    Assert.check(expectedCodeSequenceNonThisCallingConst.equals(foundCodeSequence));
                 }
             }
         }
     }
 
-    public void testCheckVnew() throws Exception {
-        for (String source : List.of(
+    @Test
+    void testSelectors() throws Exception {
+        assertOK(
                 """
-                abstract value class A {}
-                """,
-                """
-                value class A {}
-                """
-        )) {
-            File dir = assertOK(true, source);
-            for (final File fileEntry : dir.listFiles()) {
-                ClassFile classFile = ClassFile.read(fileEntry);
-                boolean isAbstract = classFile.access_flags.is(Flags.ABSTRACT);
-                for (Method method : classFile.methods) {
-                    if (isAbstract) {
-                        assertTrue(method.getName(classFile.constant_pool).equals("<init>"));
-                        assertTrue(!method.access_flags.is(Flags.STATIC));
-                    } else {
-                        assertTrue(method.getName(classFile.constant_pool).equals("<vnew>"));
-                        assertTrue(method.access_flags.is(Flags.STATIC));
-                        assertTrue(!method.access_flags.is(Flags.ABSTRACT));
-                        assertTrue(method.descriptor.getReturnType(classFile.constant_pool).equals("A"));
+                value class V {
+                    void selector() {
+                        Class<?> c = int.class;
                     }
                 }
-            }
-        }
+                """
+        );
+        assertFail("compiler.err.expected",
+                """
+                value class V {
+                    void selector() {
+                        int i = int.some_selector;
+                    }
+                }
+                """
+        );
+    }
 
-        // check that <vnew> is invoked with invokestatic
-        for (String source : List.of(
+    @Test
+    void testNullAssigment() throws Exception {
+        assertOK(
                 """
-                value class A {
-                    void FIND_ME() {
-                        A a = new A();
+                value final class V {
+                    final int x = 10;
+
+                    value final class X {
+                        final V v;
+                        final V v2;
+
+                        X() {
+                            this.v = null;
+                            this.v2 = null;
+                        }
+
+                        X(V v) {
+                            this.v = v;
+                            this.v2 = v;
+                        }
+
+                        V foo(X x) {
+                            x = new X(null);  // OK
+                            return x.v;
+                        }
                     }
-                }
-                """
-        )) {
-            File dir = assertOK(true, source);
-            for (final File fileEntry : dir.listFiles()) {
-                ClassFile classFile = ClassFile.read(fileEntry);
-                for (Method method : classFile.methods) {
-                    if (method.getName(classFile.constant_pool).equals("FIND_ME")) {
-                        Code_attribute code_attribute = (Code_attribute)method.attributes.get("Code");
-                        boolean firstInst = true;
-                        for (Instruction inst: code_attribute.getInstructions()) {
-                            if (firstInst) {
-                                assertTrue(inst.getMnemonic().equals("invokestatic"));
-                                CONSTANT_Methodref_info methodInfo =
-                                        (CONSTANT_Methodref_info)classFile.constant_pool.get(inst.getUnsignedShort(1));
-                                assertTrue(methodInfo.getClassInfo().getName().equals("A"));
-                                assertTrue(methodInfo.getNameAndTypeInfo().getName().equals("<vnew>"));
-                                break;
-                            }
+                    V bar(X x) {
+                        x = new X(null); // OK
+                        return x.v;
+                    }
+
+                    class Y {
+                        V v;
+                        V [] va = { null }; // OK: array initialization
+                        V [] va2 = new V[] { null }; // OK: array initialization
+                        void ooo(X x) {
+                            x = new X(null); // OK
+                            v = null; // legal assignment.
+                            va[0] = null; // legal.
+                            va = new V[] { null }; // legal
                         }
                     }
                 }
-            }
-        }
-
-        // checking the aconst_init and withfield instructions
-        for (String source : List.of(
                 """
-                value class A {
-                    int i;
-                    String s;
+        );
+    }
 
-                    A(int i, String s) {
-                        this.i = i;
-                        this.s = s;
+    @Test
+    void testSerializationWarnings() throws Exception {
+        String[] previousOptions = getCompileOptions();
+        try {
+            setCompileOptions(new String[] {"-Xlint:serial", "--enable-preview", "--source",
+                    Integer.toString(Runtime.version().feature())});
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class AVC implements Serializable {}
+                    """);
+            assertOKWithWarning("compiler.warn.serializable.value.class.without.write.replace.1",
+                    """
+                    import java.io.*;
+                    value class VC implements Serializable {
+                        private static final long serialVersionUID = 0;
                     }
-                }
-                """
-        )) {
-            File dir = assertOK(true, source);
-            for (final File fileEntry : dir.listFiles()) {
-                ClassFile classFile = ClassFile.read(fileEntry);
-                for (Method method : classFile.methods) {
-                    if (method.getName(classFile.constant_pool).equals("<vnew>")) {
-                        Code_attribute code_attribute = (Code_attribute)method.attributes.get("Code");
-                        for (Instruction inst: code_attribute.getInstructions()) {
-                            if (inst.getMnemonic().equals("aconst_init")) {
-                                CONSTANT_Class_info classInfo =
-                                        (CONSTANT_Class_info)classFile.constant_pool.get(inst.getUnsignedShort(1));
-                                assertTrue(classInfo.getName().equals("A"));
-                            } else if (inst.getMnemonic().equals("withfield")) {
-                                CONSTANT_Fieldref_info fieldInfo = (CONSTANT_Fieldref_info)classFile.constant_pool.get(inst.getUnsignedShort(1));
-                                assertTrue(fieldInfo.getClassName().equals("A"));
-                                ConstantPool.CONSTANT_NameAndType_info nameAndType = fieldInfo.getNameAndTypeInfo();
-                                if (nameAndType.getName().equals("i")) {
-                                    assertTrue(nameAndType.getType().equals("I"));
-                                } else if (nameAndType.getName().equals("s")) {
-                                    assertTrue(nameAndType.getType().equals("Ljava/lang/String;"));
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    class C implements Serializable {
+                        private static final long serialVersionUID = 0;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        protected Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    value class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    value class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        public Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    value class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOKWithWarning("compiler.warn.serializable.value.class.without.write.replace.1",
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        private Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    value class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOKWithWarning("compiler.warn.serializable.value.class.without.write.replace.2",
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        private Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    class Serializable1 extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    class Serializable2 extends Serializable1 {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        public Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    abstract value class Super implements Serializable {
+                        private static final long serialVersionUID = 0;
+                        protected Object writeReplace() throws ObjectStreamException {
+                            return null;
+                        }
+                    }
+                    class ValueSerializable extends Super {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    """
+                    import java.io.*;
+                    value record ValueRecord() implements Serializable {
+                        private static final long serialVersionUID = 1;
+                    }
+                    """);
+            assertOK(
+                    // Number is a special case, no warning for identity classes extending it
+                    """
+                    class NumberSubClass extends Number {
+                        private static final long serialVersionUID = 0L;
+                        @Override
+                        public double doubleValue() { return 0; }
+                        @Override
+                        public int intValue() { return 0; }
+                        @Override
+                        public long longValue() { return 0; }
+                        @Override
+                        public float floatValue() { return 0; }
+                    }
+                    """
+            );
+        } finally {
+            setCompileOptions(previousOptions);
+        }
+    }
+
+    @Test
+    void testAssertUnsetFieldsSMEntry() throws Exception {
+        String[] previousOptions = getCompileOptions();
+        try {
+            String[] testOptions = {
+                    "--enable-preview",
+                    "-source", Integer.toString(Runtime.version().feature()),
+                    "-XDgenerateAssertUnsetFieldsFrame",
+                    "--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED"
+            };
+            setCompileOptions(testOptions);
+
+            record Data(String src, int[] expectedFrameTypes, String[][] expectedUnsetFields) {}
+            for (Data data : List.of(
+                    new Data(
+                            """
+                            import jdk.internal.vm.annotation.Strict;
+                            class Test {
+                                @Strict
+                                final int x;
+                                @Strict
+                                final int y;
+                                Test(boolean a, boolean b) {
+                                    if (a) { // assert_unset_fields {x, y}
+                                        x = 1;
+                                        if (b) { // assert_unset_fields {y}
+                                            y = 1;
+                                        } else { // assert_unset_fields {y}
+                                            y = 2;
+                                        }
+                                    } else { // assert_unset_fields {x, y}
+                                        x = y = 3;
+                                    }
+                                    super();
+                                }
+                            }
+                            """,
+                            // three unset_fields entries, entry type 246, are expected in the stackmap table
+                            new int[] {246, 21, 246, 7, 246, 9},
+                            // expected fields for each of them:
+                            new String[][] { new String[] { "y:I" }, new String[] { "x:I", "y:I" }, new String[] {} }
+                    ),
+                    new Data(
+                            """
+                            import jdk.internal.vm.annotation.Strict;
+                            class Test {
+                                @Strict
+                                final int x;
+                                @Strict
+                                final int y;
+                                Test(int n) {
+                                    switch(n) {
+                                        case 2:
+                                            x = y = 2;
+                                            break;
+                                        default:
+                                            x = y = 100;
+                                            break;
+                                    }
+                                    super();
+                                }
+                            }
+                            """,
+                            // here we expect only one
+                            new int[] {20, 12, 246, 10},
+                            // stating that no field is unset
+                            new String[][] { new String[] {} }
+                    )
+            )) {
+                File dir = assertOK(true, data.src());
+                for (final File fileEntry : dir.listFiles()) {
+                    ClassFile classFile = ClassFile.read(fileEntry);
+                    for (Method method : classFile.methods) {
+                        if (method.getName(classFile.constant_pool).equals("<init>")) {
+                            Code_attribute code = (Code_attribute)method.attributes.get("Code");
+                            StackMapTable_attribute stackMapTable = (StackMapTable_attribute)code.attributes.get("StackMapTable");
+                            int entryIndex = 0;
+                            Assert.check(data.expectedFrameTypes().length == stackMapTable.entries.length, "unexpected stackmap length");
+                            int expectedUnsetFieldsIndex = 0;
+                            for (StackMapTable_attribute.stack_map_entry entry : stackMapTable.entries) {
+                                Assert.check(data.expectedFrameTypes()[entryIndex++] == entry.entry_type);
+                                if (entry.entry_type == 246) {
+                                    StackMapTable_attribute.assert_unset_fields auf = (StackMapTable_attribute.assert_unset_fields)entry;
+                                    Assert.check(data.expectedUnsetFields()[expectedUnsetFieldsIndex].length == auf.number_of_unset_fields);
+                                    int index = 0;
+                                    for (int i : auf.unset_fields) {
+                                        String unsetStr = classFile.constant_pool.getNameAndTypeInfo(i).getName() + ":" +
+                                                classFile.constant_pool.getNameAndTypeInfo(i).getType();
+                                        Assert.check(data.expectedUnsetFields()[expectedUnsetFieldsIndex][index++].equals(unsetStr));
+                                    }
+                                    expectedUnsetFieldsIndex++;
                                 }
                             }
                         }
                     }
                 }
+            }
+        } finally {
+            setCompileOptions(previousOptions);
+        }
+    }
+
+    private File findClassFileOrFail(File dir, String name) {
+        for (final File fileEntry : dir.listFiles()) {
+            if (fileEntry.getName().equals(name)) {
+                return fileEntry;
+            }
+        }
+        throw new AssertionError("file not found");
+    }
+
+    private Attribute findAttributeOrFail(Attributes attributes, Class<? extends Attribute> attrClass, int numberOfAttributes) {
+        int attrCount = 0;
+        Attribute result = null;
+        for (Attribute attribute : attributes) {
+            if (attribute.getClass() == attrClass) {
+                attrCount++;
+                if (result == null) {
+                    result = attribute;
+                }
+            }
+        }
+        if (attrCount == 0) throw new AssertionError("attribute not found");
+        if (attrCount != numberOfAttributes) throw new AssertionError("incorrect number of attributes found");
+        return result;
+    }
+
+    private void checkAttributeNotPresent(Attributes attributes, Class<? extends Attribute> attrClass) {
+        for (Attribute attribute : attributes) {
+            if (attribute.getClass() == attrClass) {
+                throw new AssertionError("attribute found");
             }
         }
     }
